# sphinxcontrib-external-link

./: .editorconfig  README.rst  pyproject.toml  setup.cfg
.github/workflows/: main.yml
sphinxcontrib/: external_link.py
tests/: test_it.py
