[tool.poetry]
name = "sphinxcontrib-external-link"
version = "0.1.0"
description = "Override ref(link to docs) extension to open new tab(window)"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"
packages = [
    { include = "sphinxcontrib" },
]

[tool.poetry.dependencies]
python = "^3.7 | ^3.8 | ^3.9 | ^3.10"
Sphinx = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
